Upload and Update Attachment

--- a/ConfluencePublisher/Properties/launchSettings.json
+++ b/ConfluencePublisher/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ConfluencePublisher": {
       "commandName": "Project",
-      "commandLineArgs": "C:\\Users\\Gabriel\\Projects\\dotnet-confluence-publisher"
+      "commandLineArgs": "C:\\Users\\Gabriel\\Projects\\dotnet\\confluence-markdown-publisher"
     }
   }
 }
